# checkasm

./: .clang-format  .gitlab-ci.yml  Makefile  README.md  ext-build-test.make  meson.build  meson_options.txt
.github/workflows/: build.yml  compile.yml  docs.yml
checkasm/: attributes.h  checkasm.c  checkasm.h  cpu.c  cpu.h  meson.build  test_nihcpy.c
checkasm/common/: attributes.h  cpu.c  cpu.h  intops.h
checkasm/common/arm/: cpu.c
checkasm/common/loongarch/: cpu.c
checkasm/common/ppc/: cpu.c
checkasm/common/riscv/: cpu.c  cpu.h
checkasm/common/x86/: cpu.c  cpu.h  cpuid.asm
checkasm/loongarch/: cpu.c  cpu.h
checkasm/ppc/: cpu.c  cpu.h
checkasm/riscv/: checkasm_64.S  cpu.c
checkasm/x86/: checkasm.asm
docs/: Doxyfile.in  benchmarking.md  getting-started.md  integration.md  introduction.md  meson.build  writing-tests.md
doxygen/: attributes_8h.js  benchmarking.html  checkasm_8h.html  checkasm_8h_source.html  files.html  getting_started.html  group__aliases.html  group__floatcmp.html  group__internal.html  group__rng.html  index.html  integration.html  navtreedata.js  navtreeindex0.js  structCheckasmConfig.html  structCheckasmTest.js  test_8h.html  test_8h_source.html  utils_8h.js
doxygen/search/: all_10.js  all_12.js  all_14.js  all_15.js  all_16.js  all_19.js  all_3.js  all_5.js  all_b.js  all_e.js  all_f.js  defines_0.js  groups_1.js  groups_2.js  groups_6.js  groups_8.js  groups_9.js  groups_a.js  groups_c.js  groups_d.js  pages_11.js  pages_14.js  pages_15.js  pages_16.js  pages_18.js  pages_3.js  pages_4.js  pages_e.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
example/: checkasm.c  checkasm.h  example.c  example.h  meson.build  nihcpy.c  nihcpy.h  test.c  test_nihcpy.c
example/x86/: example.asm  nihcpy_x86.asm
include/: meson.build
include/checkasm/: attributes.h  checkasm.h  meson.build  perf.h  platform.h  test.h  utils.h
include/checkasm/longjmp/: posix.h  win32.h  win64.h
include/checkasm/osdep/: aarch64.h  arm.h  generic.h  loongarch.h  ppc64le.h  riscv.h  x86_32.h  x86_64.h
include/checkasm/perf/: aarch64.h  arm.h  dummy.h  gettime.h  linux.h  loongarch32.h  loongarch64.h  mach.h  macos_kperf.h  ppc64le.h  windows.h  x86.h
include/checkasm/platform/: aarch64.h  arm.h  generic.h  loongarch.h  ppc64le.h  riscv.h  x86_32.h  x86_64.h
master/: attributes_8h.html  attributes_8h_source.html  benchmarking.html  checkasm_8h.html  checkasm_8h.js  checkasm_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  files.html  files.js  getting_started.html  graph_legend.html  group__aliases.html  group__bufcmp.html  group__bufcmp.map  group__bufcmp.md5  group__bufrect.html  group__floatcmp.html  group__internal.html  group__internal.map  group__internal.md5  group__memory.html  group__rng.html  index.html  index.js  integration.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  structCheckasmConfig.html  structCheckasmConfig.js  structCheckasmConfig__coll__graph.map  structCheckasmConfig__coll__graph.md5  structCheckasmCpuInfo.html  structCheckasmCpuInfo.js  structCheckasmDist.html  structCheckasmDist.js  structCheckasmPerf.html  structCheckasmTest.html  (+6 more)
master/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  groups_0.js  groups_3.js  groups_4.js  groups_5.js  groups_7.js  groups_b.js  pages_0.js  pages_1.js  pages_13.js  pages_15.js  pages_17.js  pages_18.js  pages_2.js  pages_4.js  pages_5.js  pages_6.js  (+14 more)
src/: checkasm.c  checkasm_config.asm  checkasm_config.h  cpu.c  cpu.h  function.c  function.h  html_data.h  internal.h  longjmp.h  memcpy.c  meson.build  nihcpy.h  nihcpy_x86.asm  perf.c  perf_internal.h  signal.c  stackguard.c  stats.c  stats.h  util.c  utils.c
src/arm/: asm.S  checkasm_32.S  checkasm_64.S  cpu.c  cpu.h
src/html_data/: body.html  checkasm.css  checkasm.js
src/loongarch/: checkasm.S  loongson_asm.S
src/perf/: arm.c  linux.c  macos_kperf.c
src/riscv/: asm.S  callcheck.S  checkasm_64.S  cpu.c
src/x86/: checkasm.asm  cpu.c  cpu.h  nihcpy_x86.asm  x86inc.asm
tests/: checkasm.c  generic.c  meson.build  selftest.c  tests.h
tests/arm/32/: tests.S  tests.c
tests/arm/64/: tests.S  tests.c
tests/riscv/: tests.S  tests.c
tests/x86/: tests.asm  tests.c  tests_asm.asm
